plugins/kotlin/idea/tests/testData/highlighterMetaInfoWithComposeCompilerCheckers/MissingComposableOnOverride.kt.highlighting
// COMPILER_ARGUMENTS: -Xplugin=$TEST_DIR$/compose_fake_plugin.jar
// FILE: main.kt
// ALLOW_ERRORS
import androidx.compose.runtime.Composable

interface Foo {
    @Composable
    fun composableFunction(param: Boolean): Boolean
    fun nonComposableFunction(param: Boolean): Boolean
    val nonComposableProperty: Boolean
}

object FakeFoo : Foo {
    <!HIGHLIGHTING("severity='ERROR'; descr='[CONFLICTING_OVERLOADS]'")!>override fun composableFunction(param: Boolean)<!> = true
    <!HIGHLIGHTING("severity='ERROR'; descr='[CONFLICTING_OVERLOADS]'")!>@Composable override fun nonComposableFunction(param: Boolean)<!> = true
    override val nonComposableProperty: Boolean <!HIGHLIGHTING("severity='ERROR'; descr='[CONFLICTING_OVERLOADS]'")!>@Composable get()<!> = true
}

interface Bar {
    @Composable
    fun composableFunction(param: Boolean): Boolean
    @get:Composable val composableProperty: Boolean
    fun nonComposableFunction(param: Boolean): Boolean
    val nonComposableProperty: Boolean
}

object FakeBar : Bar {
    <!HIGHLIGHTING("severity='ERROR'; descr='[CONFLICTING_OVERLOADS]'")!>override fun composableFunction(param: Boolean)<!> = true
    <!HIGHLIGHTING("severity='ERROR'; descr='[CONFLICTING_OVERLOADS]'")!>override val composableProperty: Boolean<!> = true
    <!HIGHLIGHTING("severity='ERROR'; descr='[CONFLICTING_OVERLOADS]'")!>@Composable override fun nonComposableFunction(param: Boolean)<!> = true
    override val nonComposableProperty: Boolean <!HIGHLIGHTING("severity='ERROR'; descr='[CONFLICTING_OVERLOADS]'")!>@Composable get()<!> = true
}
